# advent-of-code

./: .gitignore  README.md  advent-of-code.code-workspace  advent_of_code.code-workspace  pyproject.toml  run_all.py
2019/01/: __main__.py
2019/02/: __main__.py
2019/03/: __main__.py
2019/04/: __main__.py
2019/05/: __main__.py
2019/06/: __main__.py
2019/07/: __main__.py
2019/08/: __main__.py
2019/09/: __main__.py
2021/01/: __main__.py
2021/02/: __main__.py  submarine1.py  submarine2.py
2021/03/: __main__.py
2021/04/: __main__.py  board.py
2021/05/: __main__.py  hydrothermal_vent.py
2021/06/: __main__.py
2021/07/: __main__.py
2021/08/: __main__.py  seven_segment.py
2021/09/: __main__.py
2021/10/: __main__.py
2021/11/: __main__.py  coord.py
2021/12/: __main__.py  cave.py
2021/13/: __main__.py
2021/14/: __main__.py  pair.py
2021/15/: __main__.py  node.py
2021/16/: __main__.py  packet.py
2021/17/: __main__.py
2021/18/: __main__.py  pair.py
2021/19/: __main__.py  coord.py  coordinate_system.py  scanner.py
2021/20/: __main__.py  image.py
2021/21/: __main__.py  deterministic_dice.py  dirac_dice.py  player.py  score.py  universe.py
2021/22/: __main__.py  cuboid_instruction.py  cuboid_part_1.py  cuboid_part_2.py
2021/23/: __main__.py  burrow.py  burrow1.py  burrow2.py
2021/24/: __main__.py  alu.py  instruction.py  registers.py
2021/25/: __main__.py  sea_cucumbers.py
2022/template/: generate.py
2023/15/: main.py
2023/template/: generate.py
2024/template/: generate.py
2025/01/: part1.tim  part2.tim
(+255 files in other folders)
