[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11"
black = "^24.10.0"
snakeviz = "^2.2.2"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
