[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code repository"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "snakeviz>=2.2.2",
]

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-watch>=4.2.0",
]
